[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scenes/ui/MainMenu.gd" id="1_mainmenu"]
[ext_resource type="Texture2D" uid="uid://dcp40v37h6aju" path="res://assets/sprites/main-bg.png" id="2_bg"]
[ext_resource type="Texture2D" path="res://assets/sprites/logo2.png" id="3_logo"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mainmenu")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bg")
expand_mode = 1
stretch_mode = 6

[node name="Logo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 100.0
offset_right = 250.0
offset_bottom = 400.0
grow_horizontal = 2
texture = ExtResource("3_logo")
expand_mode = 1
stretch_mode = 5

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 50.0
offset_right = 150.0
offset_bottom = 450.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContinueButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "BUTTON_CONTINUE"
visible = false
custom_minimum_size = Vector2(300, 80)

[node name="StartButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "BUTTON_START"
custom_minimum_size = Vector2(300, 80)

[node name="SettingsButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "BUTTON_SETTINGS"
custom_minimum_size = Vector2(300, 80)

[node name="ExitButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "BUTTON_EXIT"
custom_minimum_size = Vector2(300, 80)

[node name="StudioLogo" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = -60.0
offset_right = 200.0
offset_bottom = -30.0
grow_vertical = 0
texture_normal = ExtResource("3_logo")
ignore_texture_size = true
stretch_mode = 5

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -60.0
offset_right = -100.0
offset_bottom = -30.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "v.1.0"
horizontal_alignment = 2
vertical_alignment = 1
